attempts at fixing some layout issues with knowledge from class prior to week 2

--- a/style.css
+++ b/style.css
@@ -29,16 +29,13 @@ header h1 .seo {
 header nav {
     padding-top: 15px;
     margin-right: 20px;
-    float: right;
+    position: absolute
+    ;
+    top: 15px;
+    right: 0;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
     list-style-type: none;
-}
-
-.float-right1 {
-    float: right;
-    margin-left: 25px;
-    padding-top: 21px;
 }
 
 header li {
@@ -55,8 +52,6 @@ a {
 
 figure {
     height: 800px;
-    width: 100%;
-    clear: both;
     margin-bottom: 25px;
     background-color: #2a607c;
     background-image: url("/Images/digital-marketing-meeting.jpg");
@@ -67,7 +62,7 @@ figure {
 /* Styling for left aligned boxes*/
 
 main {
-    width: 75%;
+    max-width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
@@ -75,11 +70,10 @@ main {
 .about {
     margin-bottom: 20px;
     padding: 50px;
-    height: 300px;
+    min-height: 300px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #0072bb;
-    color: #ffffff;
-   
+    color: #ffffff;   
 }
 
 .about img {
@@ -111,9 +105,11 @@ aside {
     margin-right: 20px;
     padding: 20px;
     clear: both;
-    float: right;
+    position: absolute;
+    right: 0;
+    top: 57.58em;
     width: 20%;
-    height: 100%;
+    min-height:100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
 }
@@ -128,18 +124,14 @@ aside {
 .benefit h3 {
     margin-bottom: 10px;
     text-align: center;
+    word-wrap: break-word;
 }
-
-
 
 .benefit img {
     display: block;
-    margin: 10px auto;
-    max-width: 150px;
+    margin: auto;
+    max-width: 150px; 
 }
-
-
-
 
 footer {
     padding: 30px;
